--- a/proj/Makefile
+++ b/proj/Makefile
@@ -6,7 +6,7 @@ export GVPROOT=$(shell git rev-parse --show-toplevel)/Common-lib
 .PHONY: all
 
 all:
-	#${SCRIPTROOT}/rename_gerbers.sh ${PROJECT}
-	#${SCRIPTROOT}/gerb_render_4L.sh ${PROJECT}
+	${SCRIPTROOT}/rename_gerbers.sh ${PROJECT}
+	${SCRIPTROOT}/gerb_render_4L.sh ${PROJECT}
 	${SCRIPTROOT}/convert_renders.sh ${PROJECT}
 
