--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,39 @@ tags
 *.old
 
 Thumbs.db
+*.swp
+
+# LaTeX ignores
+~\$*
+*.log
+*.raw
+*.aux
+*.glo
+*.idx
+*.log
+*.toc
+*.ist
+*.acn
+*.acr
+*.alg
+*.bbl
+*.blg
+*.dvi
+*.glg
+*.gls
+*.ilg
+*.ind
+*.lof
+*.lot
+*.maf
+*.mtc
+*.mtc1
+*.out
+*.synctex.gz
+*.make
+*.d
+*.fls
+*.temp
+*-converted-to.pdf
+*.mtc0
+*.ptc
